--- a/cv.html
+++ b/cv.html
@@ -106,7 +106,7 @@
       <a class="btn" href="Emmanuel.CV.pdf" download="Emmanuel.CV.pdf">⬇️ Télécharger le CV (PDF)</a>
       <a class="btn secondary" href="Emmanuel.CV.pdf" target="_blank" rel="noopener">🔗 Ouvrir dans un nouvel onglet</a>
       <button class="btn light" onclick="window.print()">🖨️ Imprimer</button>
-      <a class="btn" href="MonPortfolio.html">↩️ Retour au Portfolio</a>
+      <a class="btn" href="index.html">↩️ Retour au Portfolio</a>
     </div>
   </header>
 
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
