--- a/vt.html
+++ b/vt.html
@@ -165,7 +165,7 @@
 
       <div>
         <a href="vt.pdf" download="vt.pdf" class="btn">⬇️ Télécharger la veille (PDF)</a>
-        <a href="MonPortfolio.html" class="btn secondary">↩️ Retour au portfolio</a>
+        <a href="index.html" class="btn secondary">↩️ Retour au portfolio</a>
       </div>
     </section>
   </main>
@@ -176,3 +176,4 @@
 
 </body>
 </html>
+
