--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
     <section id="contact" class="contact">
       <div class="coords">
         <h3>Contact</h3>
-        <p><strong>📍 Adresse :</strong> 12 Rue de l’Innovation, 75000 Paris</p>
-        <p><strong>📞 Téléphone :</strong> 07 67 89 23 45</p>
-        <p><strong>📧 Email :</strong> <a href="mailto:emmanuel.contaoi@gmail.com">emmanuel.contaoi@gmail.com</a></p>
+        <p><strong>📍 Adresse :</strong> 4 sente de tinchebray Maurepas 78310</p>
+        <p><strong>📞 Téléphone :</strong> 06 77 22 35 58</p>
+        <p><strong>📧 Email :</strong> <a href="mailto:emmanuelcontaoi78@gmail.com">emmanuelcontaoi78@gmail.com</a></p>
         <p><strong>💼 LinkedIn :</strong> <a href="https://www.linkedin.com/in/emmanuel-contaoi" target="_blank">linkedin.com/in/emmanuel-contaoi</a></p>
         <p><strong>🌐 GitHub :</strong> <a href="https://github.com/emmanuel-contaoi" target="_blank">github.com/emmanuel-contaoi</a></p>
       </div>
