--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <h2>Mes Projets</h2>
       <div class="skills">
         <div class="skill"><h3>Mon CV</h3><p>Découvrez mon parcours scolaire et professionnel résumé en un CV clair et moderne.</p><a href="cv.html" class="btn secondary">Voir le CV</a></div>
-        <div class="skill"><h3>Veille Technologique</h3><p>Présentation sur le thème du <strong>phishing</strong> et les enjeux de la cybersécurité.</p><a href="Vt.html" class="btn secondary">Voir la veille</a></div>
+        <div class="skill"><h3>Veille Technologique</h3><p>Présentation sur le thème du <strong>phishing</strong> et les enjeux de la cybersécurité.</p><a href="vt.html" class="btn secondary">Voir la veille</a></div>
       </div>
     </section>
 
